--- a/task-manager-backend/.env.example
+++ b/task-manager-backend/.env.example
@@ -1,3 +1,6 @@
+﻿# Backend Environment Variables
+# Copy this file to .env and fill in your actual values
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
@@ -6,11 +9,7 @@ NODE_ENV=development
 MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/taskmanager
 
 # JWT Configuration
-JWT_SECRET=your_secure_jwt_secret_key_here_make_it_long_and_complex
+JWT_SECRET=your_secure_jwt_secret_key_here
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:8081
-
-# Production Settings
-# NODE_ENV=production
-# FRONTEND_URL=https://your-app-domain.com
